# tutorial_fast_api

./: README.md  main.py  pyproject.toml
mongo_app/backend/model/: item.py
mongo_app/backend/routes/item/: item.py
my_app/: docker-compose.yml
my_app/backend/: Dockerfile  main.py  pyproject.toml
my_app/backend/config/: config.py  config.yml
my_app/backend/routes/core/: __init__.py  core.py
my_app/backend/routes/item/: __init__.py
security/: main.py  pyproject.toml
sql_app/: docker-compose.yml
sql_app/backend/: Dockerfile  main.py  pyproject.toml
sql_app/backend/models/: models.py  schemas.py
sql_app/backend/operations/: crud.py  database.py
