[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["Kyriakos Fragkeskos <kyriakos.frangeskos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.59.0"
uvicorn = "^0.11.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
