[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kyriakos Fragkeskos <kyriakos.frangeskos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.60.1"}
motor = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
