[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kyriakos Fragkeskos <kyriakos.frangeskos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
sqlalchemy = "^1.3.18"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
uvicorn = "^0.11.7"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
